# Docs

./: .PostgreSQL.md.kate-swp  .add_commit.sh.swp  .linux2.md.kate-swp  12.12.2023.pass  API.md  Alenbic and postgreSQL.md  Alenbic.md  Autotest&code_coverage.md  Code_review.md  HTTP.md  Html_css.md  PostgreSQL.md  SQL_Postgres.md  TLS.md  astra-linux.md  billing.md  bootstrap.md  bush.md  console.md  docker решение проблем.md  docker.md  fastAPI.md  flask.md  git.md  git2.md  git_2.md  jquery_ajax.md  js.md  kafka.md  linux.md  linux2.md  linux_ip.md  linux_yard.md  linux_сетвые_задачи.md  mail.md  nginx.md  npm.md  pip_instsall.md  py.md  py_py_scripts.md  (+18 more)
nn_pumpkin_backend/mp-kasud-pumpkin-main/: Dockerfile  deploy.sh  docker-compose.yaml  pyproject.toml
nn_pumpkin_backend/mp-kasud-pumpkin-main/app/: commands.py  db.py  di.py  main.py  settings.py
nn_pumpkin_backend/mp-kasud-pumpkin-main/app/dummy/: auth.py  catalogs.py  commands.py  config.py  model.py  repository.py  sync.py
nn_pumpkin_backend/mp-kasud-pumpkin-main/app/fixtures/: db.py  wrapper.py
nn_pumpkin_backend/mp-kasud-pumpkin-main/app/fixtures/data/: auth_router.post.login.json  auth_router.post.logout.json  catalog_router.post.content.document_types.json  catalog_router.post.content.task_types.json  catalog_router.post.content.users.json  catalog_router.post.fetch_catalogs_by_user.json  commands_router.post.decisions.json  config_router.get.config_id.json  config_router.get.json  config_router.get.list_user_settings.json  config_router.post.check_version.json  config_router.post.user_settings.json  (+7 more)
(+2 files in other folders)
