[project]
name = "kasud-backend-pumpkin"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim Zakirov",email = "vadim.zakirov@alao.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "typer (>=0.15.3,<0.16.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry.scripts]
bootstrap = "app.commands:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]
